# tfg-aquaporinas

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
anexos/: README.md
anexos/A_repositorio/: INPUTS_CONJUNTO_DATOS.md  README.md
anexos/B_curado_gff3_vs_exonerate/: Anexo_B_Pepstats_Exonerate.txt  Anexo_B_aquaporin_peptides_GFF3.fasta  Anexo_B_exonerate_genes_aqp.fasta  README.md
anexos/C_datos_rnaseq/: Anexo_C_de_aquaporins_roots.csv  Anexo_C_homeolog_summary_statistics.csv  README.md
anexos/D_figuras_TFG/: README.md
anexos/E_descartes/: README.md
anexos/F_evidencia_5polemicas/: README.md
anexos/G_robustez_pca/: Anexo_G_memoria_tecnica.md  README.md
anexos/H_parametros_fisicoquimicos/: README.md
anexos/I_soportes_filo/: Anexo_I_script_reproducible.py  README.md
anexos/J_meme_motivos/: Anexo_J_PSSM_motivo_M2.csv  Anexo_J_memoria_tecnica.md  README.md
annexes/: README.md
annexes/A_repo_overview/: README.md
annexes/B_curado_gff3_vs_exonerate/: Anexo_B_consenso_aqp_FINAL.fasta  Anexo_B_consenso_aqp_fixed.gff3  README.md
annexes/B_descartes/: Anexo_B_tabla_26_descartes.csv  README.md
annexes/C_pca_robustez/: Anexo_C_memoria_tecnica.md  Anexo_C_script_reproducible.py
annexes/C_rnaseq_datos/: Anexo_C_MultiQC_general_stats.txt  README.md  (+1 more)
data/: README.md
datos/: README.md
docs/: AUDITORIA_SCRIPTS.md  GITHUB_PAGES.md  PENDIENTE.md  REPRODUCIBILIDAD.md  ZENODO.md  efp_homeologos.html  index.html
scripts/: regenerar_figuras.py
tests/: README.md  REPORTE_DEFENSA.md  conftest.py
(+158 files in other folders)
