[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-aquaporinas"
version = "1.0.0"
description = "Scripts y tests del TFG sobre el acuaporinoma de Fragaria × ananassa 'Benihoppe'"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Noé Paredes Alfonso", email = "noeparedesalf@gmail.com" }
]
dependencies = [
    "biopython>=1.80",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "reproducibility: tests que verifican las cifras citadas en el TFG",
    "unit: tests unitarios sobre funciones aisladas",
    "needs_data: tests que requieren los datos primarios del TFG (DATA_ROOT)",
]
